--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.2
+  url_launcher: ^6.0.20
+  image_picker: ^0.8.4+10
 
 dev_dependencies:
   flutter_test:
