--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.agenda_de_contatos">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
    <application
-        android:label="agenda_de_contatos"
+        android:label="Agenda de Contatos"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
